--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,8 @@ code {
   --btn-color:rgba(198, 0, 171, 0.796);
   --menubar:rgb(65, 0, 57);
   --tbmenu:rgba(96, 0, 82, 0.5);
+  --border:rgba(198, 0, 171, 0.796);
+  --darkShadow:#000000;
 }
 
 .dark {
@@ -31,6 +33,8 @@ code {
   --btn-color:rgb(25, 166, 0);
   --menubar:rgb(8, 53, 0);
   --tbmenu:rgba(10, 68, 0, 0.500);
+    --border: rgb(25, 166, 0);
+    --darkShadow:rgb(36, 240, 0);
 }
 .home {
   background-color: var(--bg-color);
@@ -60,7 +64,19 @@ code {
   transition: .7s;
   
 }
-
+.Search{
+  background: transparent;
+  border: 3px solid var(--border);
+  border-radius: 20px;
+  width: 500px;
+  height: 40px;
+  box-shadow: 0px 0 6px var(--darkShadow);
+  transition: .7s;
+}
+.chatBox{
+  border: 3px solid var(--border);
+  transition: .7s;
+}
 
 
 
